--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@picocss/pico": "^2.0.6",
     "astro": "^4.16.2",
     "htmx.org": "^1.9.12",
     "typescript": "^5.6.3"
